--- a/src/internalPages/studentPage.form
+++ b/src/internalPages/studentPage.form
@@ -117,6 +117,9 @@
                   <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="student_tableMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
